--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: ruby
 rvm:
-  - 2.0.0
+  - 2.2
 script: bundle exec rake
 before_install:
   - gem update --system
+  - gem update bundler
+
 services:
   - redis-server
