Fix notification channel

--- a/lita_config.rb.example
+++ b/lita_config.rb.example
@@ -56,7 +56,7 @@ Lita.configure do |config|
       version_bump_command: "bundle install && bundle exec rake version:bump_patch",
       version_show_command: "bundle exec rake version:show",
       dependency_update_command: "bundle install && bundle exec rake dependencies && git checkout .bundle/config",
-      inform_channel: "eng-services-notify",
+      inform_channel: "chef-notify",
     },
   }
 end
